--- a/Program/MainWindow.xaml
+++ b/Program/MainWindow.xaml
@@ -60,6 +60,14 @@
 
 			<DataGrid Grid.Row="1" Height="300" x:Name="HorsesDataGrid" AutoGenerateColumns="False" HorizontalAlignment="Stretch">
 				<DataGrid.Columns>
+					<DataGridTextColumn Header="Position" FontSize="17" Binding="{Binding CurrentPosition}">
+						<DataGridTextColumn.ElementStyle>
+							<Style TargetType="TextBlock">
+								<Setter Property="TextAlignment" Value="Center"/>
+							</Style>
+						</DataGridTextColumn.ElementStyle>
+					</DataGridTextColumn>
+					
 					<DataGridTemplateColumn Header="Color">
 						<DataGridTemplateColumn.CellTemplate>
 							<DataTemplate>
@@ -67,11 +75,38 @@
 							</DataTemplate>
 						</DataGridTemplateColumn.CellTemplate>
 					</DataGridTemplateColumn>
-					<DataGridTextColumn Header="Name" FontSize="17" Binding="{Binding Name}"/>
-					<DataGridTextColumn Header="Position" FontSize="17" Binding="{Binding CurrentPosition}"/>
-					<DataGridTextColumn Header="Time" FontSize="17" Binding="{Binding Time}"/>
-					<DataGridTextColumn Header="Coefficient" FontSize="17" Binding="{Binding Coefficient}"/>
-					<DataGridTextColumn Header="Money" FontSize="17" Binding="{Binding Money}"/>
+					
+					<DataGridTextColumn Header="Name" FontSize="17" Binding="{Binding Name}">
+						<DataGridTextColumn.ElementStyle>
+							<Style TargetType="TextBlock">
+								<Setter Property="TextAlignment" Value="Center"/>
+							</Style>
+						</DataGridTextColumn.ElementStyle>
+					</DataGridTextColumn>
+					
+					<DataGridTextColumn Header="Time" FontSize="17" Binding="{Binding Time}">
+					<DataGridTextColumn.ElementStyle>
+						<Style TargetType="TextBlock">
+							<Setter Property="TextAlignment" Value="Center"/>
+						</Style>
+					</DataGridTextColumn.ElementStyle>
+					</DataGridTextColumn>
+					
+					<DataGridTextColumn Header="Coefficient" FontSize="17" Binding="{Binding Coefficient}">
+						<DataGridTextColumn.ElementStyle>
+							<Style TargetType="TextBlock">
+								<Setter Property="TextAlignment" Value="Center"/>
+							</Style>
+						</DataGridTextColumn.ElementStyle>
+					</DataGridTextColumn>
+					
+					<DataGridTextColumn Header="Money" FontSize="17" Binding="{Binding Money}">
+						<DataGridTextColumn.ElementStyle>
+							<Style TargetType="TextBlock">
+								<Setter Property="TextAlignment" Value="Center"/>
+							</Style>
+						</DataGridTextColumn.ElementStyle>
+					</DataGridTextColumn>
 				</DataGrid.Columns>
 			</DataGrid>
 			
